Icons working, Flags not working

--- a/frontend/theme.html
+++ b/frontend/theme.html
@@ -1129,5 +1129,6 @@
   <div id="root"></div>
 
 </body>
+<link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/components/icon.min.css'>
 
 </html>
